--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,11 @@
             <version>5.3.22</version>
             <type>pom</type>
         </dependency>
-
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
