--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,5 +3,5 @@ hibernate.showSql=true
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/deliveryou
 hibernate.connection.username=root
-hibernate.connection.password=q01689032365
-#hibernate.connection.password=@1234567890$$
+#hibernate.connection.password=q01689032365
+hibernate.connection.password=@1234567890$$
